burgerMenu and p modified

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content ="les enjeux du corail et son rôle de barrière naturelle">
     <link rel="stylesheet" href="cssDist/main.min.css">
     <title>Le Corail</title>
 </head>
@@ -38,10 +39,11 @@
                 <h3 id="utile">Utilité</h3>
                 <p>Les coraux sont des barrières naturelles contre les vagues géantes et les tsunamis. C'est pourquoi il
                     est très important de les protéger du réchauffement climatique.
-
                 </p>
+                <figure>
                 <img src="assets/img/tsunami.png" alt="Tsunami">
                 <img src="assets/img/degatTsunami.png" alt="Degâts Tsunami">
+                </figure>
 
                 <h3 id="menaces">Les coraux menacés</h3>
                 <p>
@@ -54,36 +56,11 @@
                     Par exemple depuis 1998, 98% de la surface de la grande barrière de corail australienne a été touché
                     par des épisodes de blanchissement.
                 </p>
+                <h3 id="resume">En résumé</h3>
                 <p>
-                    Lorem ipsum dolor sit amet. Sed incidunt atque et quidem debitis eum esse beatae ut sint dignissimos
-                    qui possimus saepe.
-                    Ut quaerat expedita sed magni itaque ab sint nostrum et quaerat nostrum. Qui deleniti inventore cum
-                    blanditiis dolor ea
-                    doloremque aspernatur.
-
-                    Qui error ad nisi adipisci ea quas voluptas ex facere veritatis. Est voluptatum labore a totam sint
-                    id natus ipsam ut
-                    inventore provident. Est officia eaque rem voluptatibus nesciunt id enim mollitia cum velit impedit.
-
-                    Aut dolore tenetur et vero deserunt 33 corporis perferendis. Et omnis deserunt aut ducimus
-                    voluptatum qui quaerat
-                    voluptas.
-                    issus des coraux5.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet. Sed incidunt atque et quidem debitis eum esse beatae ut sint dignissimos
-                    qui possimus saepe.
-                    Ut quaerat expedita sed magni itaque ab sint nostrum et quaerat nostrum. Qui deleniti inventore cum
-                    blanditiis dolor ea
-                    doloremque aspernatur.
-
-                    Qui error ad nisi adipisci ea quas voluptas ex facere veritatis. Est voluptatum labore a totam sint
-                    id natus ipsam ut
-                    inventore provident. Est officia eaque rem voluptatibus nesciunt id enim mollitia cum velit impedit.
-
-                    Aut dolore tenetur et vero deserunt 33 corporis perferendis. Et omnis deserunt aut ducimus
-                    voluptatum qui quaerat
-                    voluptas.
+                    La disparition du corail aura un inpact majeur sur les villes d'eaux mondiales.
+                    Il est une barrière naturelle préventive contre les catastrophes aquatiques.
+                    Nous pouvons donc nous attendre à des multiplications de ces dernières si rien n'est fait pour les préserver.
                 </p>
             </article>
 
